src/test/ui/feature-gates/feature-gate-let_else.stderr
error[E0658]: `let...else` statements are unstable
  --> $DIR/feature-gate-let_else.rs:2:5
   |
LL | /     let Some(x) = Some(1) else {
LL | |         return;
LL | |     };
   | |______^
   |
   = note: see issue #87335 <https://github.com/rust-lang/rust/issues/87335> for more information
   = help: add `#![feature(let_else)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
